Add primes numbers problem

--- a/21-08-2024/1st-tp.html
+++ b/21-08-2024/1st-tp.html
@@ -74,7 +74,7 @@ Ingrese la cantidad que desea comprar: 2
 </code></pre><p><strong>Ejemplo de Salida 2:</strong></p>
 <pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>No aplica promoción. El precio total es: 200
 </code></pre><p>Claro, aquí tienes el <strong>Problema 6</strong> modificado para incluir el uso de <code>else if</code> en la lógica del cálculo del descuento:</p>
-<h3 id="problema-6-cálculo-de-desscuentos-con-rangos-de-descuento"><strong>Problema 6: Cálculo de Desscuentos con Rangos de Descuento</strong> </h3>
+<h3 id="problema-7-cálculo-de-desscuentos-con-rangos-de-descuento"><strong>Problema 7: Cálculo de Desscuentos con Rangos de Descuento</strong> </h3>
 <p><strong>Descripción:</strong> Escribe un programa que pida al usuario el precio de un producto y la cantidad que desea comprar. Aplica un descuento basado en la cantidad comprada según las siguientes reglas:</p>
 <ul>
 <li>Si la cantidad es <code>3 o más</code>, aplica un descuento del 10% al precio total.</li>
@@ -96,6 +96,16 @@ Ingrese la cantidad que desea comprar: 2
 Ingrese la cantidad que desea comprar: 1
 </code></pre><p><strong>Ejemplo de Salida 3:</strong></p>
 <pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>No aplica promoción. El precio total es: 100
+</code></pre><h3 id="problema-8-determinar-si-un-número-es-primo"><strong>Problema 8: Determinar si un número es primo</strong> </h3>
+<p><strong>Descripción:</strong> Escribe un programa que pida al usuario que ingrese un número entero e imprimar un mensaje indicando si el número ingresado es primo o no:</p>
+<p><strong>Ejemplo de Entrada 1:</strong></p>
+<pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>Ingrese un número entero: 3
+</code></pre><p><strong>Ejemplo de Salida 1:</strong></p>
+<pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>El número ingresado es primo
+</code></pre><p><strong>Ejemplo de Entrada 2:</strong></p>
+<pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>Ingrese un número entero: 4
+</code></pre><p><strong>Ejemplo de Salida 2:</strong></p>
+<pre data-role="codeBlock" data-info="zsh" class="language-zsh zsh"><code>El número ingresado no es primo
 </code></pre>
       </div>
       
